--- a/.github/workflows/deploy-angular.yml
+++ b/.github/workflows/deploy-angular.yml
@@ -22,6 +22,6 @@ jobs:
         uses: bitovi/github-actions-angular-to-github-pages@v1.0.0
         with:
           checkout: true
-          path: dist/${{ github.event.repository.name }}
+          path: dist/date-time-picker-issue
           install_command: npm i
           build_command: npm run build -- --base-href=/${{ github.event.repository.name }}/
